--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             margin: 0;
             overflow: hidden;
-            background-color: #1d1628;
+            background-color: #1d1628; /* Set background color */
         }
         canvas {
             display: block;
@@ -39,6 +39,13 @@
             const loader = new THREE.GLTFLoader();
             loader.load('assets/red-tv-web.glb', function (gltf) {
                 model = gltf.scene;
+
+                // Scale the model down by 70%
+                model.scale.set(0.3, 0.3, 0.3);
+
+                // Center the model
+                model.position.set(0, 0, 0);
+
                 scene.add(model);
             });
 
