--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ function init() {
         loader.load('assets/red-tv-web.glb', function (gltf) {
             model = gltf.scene;
 
-            // Scale the model down by 70%
-            model.scale.set(0.3, 0.3, 0.3);
+            // Scale the model down
+            model.scale.set(0.2, 0.2, 0.2);
     
             // Center the model
             model.position.set(0, 0, 0);
