--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             loader.load('assets/red-tv-web.glb', function (gltf) {
                 model = gltf.scene;
 
-                // Scale the model down
-                model.scale.set(0.2, 0.2, 0.2);
+                // Scale the model down to 0.3
+                model.scale.set(0.3, 0.3, 0.3);
         
                 // Center the model
                 model.position.set(0, 0, 0);
