--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
 <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/tween.min.js"></script>
     <script>
         let scene, camera, renderer, model, spinSpeed, scale, isInteracting;
 
@@ -89,45 +88,23 @@
         function onMouseEnterInteractionBox() {
             if (model && !isInteracting) {
                 isInteracting = true;
-                // Tween the scale to 0.4 over 500 milliseconds
-                new TWEEN.Tween(model.scale)
-                    .to({ x: 0.4, y: 0.4, z: 0.4 }, 500)
-                    .easing(TWEEN.Easing.Quadratic.Out)
-                    .start();
-
-                // Tween the rotation speed to 0.02 over 500 milliseconds
-                new TWEEN.Tween(this)
-                    .to({}, 500)
-                    .onUpdate(function () {
-                        spinSpeed = this.tweenedValue;
-                    })
-                    .tweenedValue = 0.02
-                    .start();
+                // Scale the model to 0.4
+                model.scale.set(0.4, 0.4, 0.4);
+                // Increase the spin speed
+                spinSpeed = 0.02;
             }
         }
 
         // Handle mouse leave interaction box
         function onMouseLeaveInteractionBox() {
             if (model && isInteracting) {
-                // Wait for 300 milliseconds before resetting interaction
+                // Reset the scale to 0.2 after a short delay
                 setTimeout(() => {
-                    // Tween the scale to 0.2 over 500 milliseconds
-                    new TWEEN.Tween(model.scale)
-                        .to({ x: 0.2, y: 0.2, z: 0.2 }, 500)
-                        .easing(TWEEN.Easing.Quadratic.Out)
-                        .start();
-
-                    // Tween the rotation speed to 0.01 over 500 milliseconds
-                    new TWEEN.Tween(this)
-                        .to({}, 500)
-                        .onUpdate(function () {
-                            spinSpeed = this.tweenedValue;
-                        })
-                        .tweenedValue = 0.01
-                        .start();
-
+                    model.scale.set(0.2, 0.2, 0.2);
+                    // Reset the spin speed
+                    spinSpeed = 0.01;
                     isInteracting = false;
-                }, 300); // 300 milliseconds delay
+                }, 200); // 200 milliseconds delay
             }
         }
 
@@ -137,10 +114,7 @@
 
             if (model) {
                 model.rotation.y += spinSpeed; // Rotate the model
-                model.scale.set(scale, scale, scale); // Scale the model
             }
-
-            TWEEN.update(); // Update tween animations
 
             renderer.render(scene, camera);
         }
