--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             scene.add(light);
 
             const loader = new THREE.GLTFLoader();
-            loader.load('/assets/red-tv-web.glb', function (gltf) {
+            loader.load('assets/red-tv-web.glb', function (gltf) {
                 model = gltf.scene;
 
                 // Scale the model and position it
