--- a/index.html
+++ b/index.html
@@ -30,9 +30,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
     <script>
-        let scene, camera, renderer, model1, model2, spinSpeed, targetScale, staticMaterial, originalMaterial;
+        let scene, camera, renderer, model1, model2, spinSpeed, targetScale, staticMaterial;
 
-        function init() {
+        function loadShaderFile(url) {
+            return fetch(url)
+                .then(response => response.text());
+        }
+
+        async function init() {
             scene = new THREE.Scene();
 
             camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
@@ -57,9 +62,6 @@
                 model1.position.set(0, 0, 0);
                 scene.add(model1);
 
-                // Store the original material
-                originalMaterial = model1.children[0].material;
-
                 // Initialize spin speed and target scale
                 spinSpeed = 0.01;
                 targetScale = 0.2;
@@ -74,29 +76,43 @@
                 interactionBox.addEventListener('mouseleave', onMouseLeaveInteractionBox);
             });
 
-            loader.load('assets/tv-play-hovering.glb', function (gltf) {
+            loader.load('assets/tv-play-hovering.glb', async function (gltf) {
                 model2 = gltf.scene;
 
                 // Initial scale and position
                 model2.scale.set(0.2, 0.2, 0.2);
                 model2.position.set(0, 0, 0);
                 model2.visible = false; // Set to invisible initially
+
+                // Load shaders
+                const vertexShader = await loadShaderFile('assets/shaders/vertexShader.glsl');
+                const fragmentShader = await loadShaderFile('assets/shaders/fragmentShader.glsl');
+
+                // Apply static effect material
+                model2.traverse(function (child) {
+                    if (child.isMesh) {
+                        child.material = createStaticMaterial(vertexShader, fragmentShader);
+                    }
+                });
+
                 scene.add(model2);
             });
 
-            // Load shader material
-            const vertexShader = fetch('static_shader_vertex.glsl').then(response => response.text());
-            const fragmentShader = fetch('static_shader_fragment.glsl').then(response => response.text());
+            window.addEventListener('resize', onWindowResize, false);
+        }
 
-            Promise.all([vertexShader, fragmentShader]).then(shaders => {
-                staticMaterial = new THREE.ShaderMaterial({
-                    uniforms: { time: { value: 1.0 } },
-                    vertexShader: shaders[0],
-                    fragmentShader: shaders[1],
-                });
+        function createStaticMaterial(vertexShader, fragmentShader) {
+            const uniforms = {
+                time: { value: 0.0 }
+            };
+
+            staticMaterial = new THREE.ShaderMaterial({
+                uniforms: uniforms,
+                vertexShader: vertexShader,
+                fragmentShader: fragmentShader
             });
 
-            window.addEventListener('resize', onWindowResize, false);
+            return staticMaterial;
         }
 
         function onWindowResize() {
@@ -107,8 +123,6 @@
 
         function onMouseEnterInteractionBox() {
             if (model1 && model2) {
-                // Apply static shader to model1
-                model1.children[0].material = staticMaterial;
                 // Scale up and increase spin speed
                 targetScale = 0.4;
                 spinSpeed = 0.03;
@@ -118,8 +132,6 @@
 
         function onMouseLeaveInteractionBox() {
             if (model1 && model2) {
-                // Reset the material of model1
-                model1.children[0].material = originalMaterial;
                 // Scale down and reset spin speed
                 targetScale = 0.2;
                 spinSpeed = 0.01;
@@ -131,13 +143,16 @@
             requestAnimationFrame(animate);
 
             if (model1 && model2) {
-                staticMaterial.uniforms.time.value += 0.05; // Update the time uniform
-
                 model1.rotation.y += spinSpeed;
                 model1.scale.lerp(new THREE.Vector3(targetScale, targetScale, targetScale), 0.1); // Smooth scaling for model1
 
                 model2.rotation.y += spinSpeed;
                 model2.scale.lerp(new THREE.Vector3(targetScale, targetScale, targetScale), 0.1); // Smooth scaling for model2
+
+                // Update static effect
+                if (staticMaterial) {
+                    staticMaterial.uniforms.time.value += 0.05;
+                }
             }
 
             renderer.render(scene, camera);
