adding WIP screen

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             
             // Wait for 3 seconds (3000 milliseconds) and then make model1 invisible
                 setTimeout(() => {
-                window.location.href = 'home.html';
+                window.location.href = '404.html';
                 }, 3000);
         }
 
