--- a/home.html
+++ b/home.html
@@ -55,14 +55,14 @@
             object-fit: contain;
             opacity: 0.2;
         }
-        @media (max-width: 768px) {
+        @media (min-width: 800px) {
             .image-container {
-                width: 80vw; /* Adjust for smaller screens */
+               width: 109vw;
             }
         }
-        @media (max-width: 480px) {
+        @media (max-width: 768px) {
             .image-container {
-                width: 355vw; /* Adjust for mobile screens */
+                min-width: 355vw; /* Adjust for mobile screens */
                 left: 3vw;
             }
         }
