--- a/home.html
+++ b/home.html
@@ -11,6 +11,10 @@
             overflow: hidden;
             background-color: #1d1628;
             position: relative;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
         canvas {
             display: block;
@@ -27,15 +31,16 @@
         }
         .image-container {
             position: relative;
-            width: 90vw; /* Adjusted width */
-            max-width: 100%;
-            max-height: 100%;
+            max-width: 90vw; /* Adjusted width */
+            max-height: 90vh; /* Adjusted height */
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
         .center-image {
-            width: 100%;
-            height: auto;
+            max-width: 100%;
+            max-height: 100%;
             display: block;
-            opacity: 1;
         }
         .box-container {
             position: absolute;
