--- a/home.html
+++ b/home.html
@@ -5,148 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aaron HG | My Digital Portfolio</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-            background-color: #1d1628;
-            position: relative;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        canvas {
-            display: block;
-        }
-        .center-image-container {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            z-index: 1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        .image-container {
-            position: relative;
-            max-width: 90vw; /* Adjusted width */
-            max-height: 90vh; /* Adjusted height */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        .center-image {
-            max-width: 100%;
-            max-height: 100%;
-            display: block;
-        }
-        .box-container {
-            position: absolute;
-            top: 91px; /* Adjust as necessary */
-            left: 84px; /* Adjust as necessary */
-            width: calc(75% - 20px); /* Reduce by 10px on each side */
-            height: calc(68% - 20px); /* Reduce by 10px on each side */
-            background-color: #1d1628;
-            z-index: -1; /* Place behind the image */
-        }
-        .overlay-image {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
-            opacity: 0.2;
-        }
-        @media (min-width: 800px) {
-            .image-container {
-               width: 109vw;
-            }
-        }
-        @media (max-width: 768px) {
-            .image-container {
-                min-width: 355vw; /* Adjust for mobile screens */
-                left: 3vw;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="home.css">
 </head>
 <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script>
-    let scene, camera, renderer, staticMaterial;
-
-    async function loadShaderFile(url) {
-        return fetch(url)
-            .then(response => response.text());
-    }
-
-    function createStaticMaterial(vertexShader, fragmentShader) {
-        return new THREE.ShaderMaterial({
-            uniforms: {
-                time: { value: 0 }
-            },
-            vertexShader: vertexShader,
-            fragmentShader: fragmentShader
-        });
-    }
-
-    async function init() {
-        scene = new THREE.Scene();
-
-        camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-        camera.position.z = 5;
-
-        renderer = new THREE.WebGLRenderer({ antialias: true });
-        renderer.setClearColor(0x1d1628); // Set background color to #1d1628
-        renderer.setSize(window.innerWidth, window.innerHeight);
-        document.body.appendChild(renderer.domElement);
-
-        // Load shaders
-        const vertexShader = await loadShaderFile('assets/shaders/vertexShader.glsl');
-        const fragmentShader = await loadShaderFile('assets/shaders/fragmentShader.glsl');
-
-        // Create static material
-        staticMaterial = createStaticMaterial(vertexShader, fragmentShader);
-
-        // Create a plane that covers the whole screen with the shader material
-        const shaderPlaneGeometry = new THREE.PlaneGeometry(window.innerWidth, window.innerHeight);
-        const shaderPlane = new THREE.Mesh(shaderPlaneGeometry, staticMaterial);
-        scene.add(shaderPlane);
-
-        animate();
-    }
-
-    function onWindowResize() {
-        camera.aspect = window.innerWidth / window.innerHeight;
-        camera.updateProjectionMatrix();
-        renderer.setSize(window.innerWidth, window.innerHeight);
-    }
-
-    function animate() {
-        requestAnimationFrame(animate);
-
-        // Update time uniform in the shader
-        if (staticMaterial) {
-            staticMaterial.uniforms.time.value += 0.01;
-        }
-
-        renderer.render(scene, camera);
-    }
-
-    init();
-
-    </script>
-    
+    <script src="staticAnimation.js"></script>
      <div class="center-image-container">
         <div class="box-container"></div>
-        <div class="image-container">
+         <div class="image-container">
             <img src="assets/telly.png" class="center-image">
             <img src="assets/tellyOverlay.png" class="overlay-image">
         </div>
     </div>
-
 </body>
 </html>
