--- a/home.html
+++ b/home.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <div class="backdrop">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="staticAnimation.js"></script>
      <div class="center-image-container">
         <div class="box-container"></div>
@@ -17,5 +18,6 @@
             <img src="assets/tellyOverlay.png" class="overlay-image">
         </div>
     </div>
+</div>
 </body>
 </html>
