fixes-to box holder (now site box)

--- a/home.html
+++ b/home.html
@@ -11,13 +11,16 @@
     <div class="backdrop">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
         <script src="staticAnimation.js"></script>
-     </div>
-     <div class="center-image-container">
+    </div>    
+    <div class="center-image-container">
          <div class="image-container">
             <img src="assets/telly.png" class="center-image">
-            <img src="assets/tellyOverlay.png" class="overlay-image">                     
+            <img src="assets/tellyOverlay.png" class="overlay-image">   
         </div>
-    </div>
-    <div class="box-container"></div>
+            <div class="site-box">
+            </div>
+        </div> 
+    
+
 </body>
 </html>
