--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
                     <img src="assets/vidLoadIn.gif" class="vid-load-in">
                     <img src="assets/HeadOpenHold.gif" class="head-open-hold">
                     <div class="exit-vid" onclick="closeVid()">X</div>
-                    <iframe src="https://player.vimeo.com/video/840401171" title="showreel" width="94.5%" height="97.5%" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                    <iframe src="https://player.vimeo.com/video/840401171" style="border:none;" title="showreel" width="94.5%" height="97.5%" allow="autoplay; fullscreen" allowfullscreen></iframe>
                 </div>
 
                     <script>
