added copywrite to site
- Added copywrite to bottom of site.
- Created css file for index page
- adjusted landing page purple pointer for mobile window
- adjusted copywrite for mobile and desktop compatability

--- a/home.html
+++ b/home.html
@@ -87,5 +87,11 @@
         contents.style.opacity = 1; // Fade in the exit button
         });
     </script>
+    <footer>
+        <div class = "copywrite-line">
+            <p style="margin: 0;">&copy; 2024 <a href="https://codefromaaron.github.io/" style="color: rgba(226, 173, 255, 0.75); text-decoration: none;">Aaron Hamilton Gold</a>. All Rights Reserved.</p>
+        </div>
+    </footer>
+
 </body>
 </html>
