--- a/index.html
+++ b/index.html
@@ -5,45 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aaron HG | My Digital Portfolio</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-            background-color: #1d1628;
-        }
-        canvas {
-            display: block;
-        }
-        #interactionBox {
-            position: absolute;
-            top: 48%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 100px;
-            height: 100px;
-            background-color: transparent;
-            border: 1px solid transparent;
-        }
-        .purple-pointer{
-            position: absolute;
-            width: 2.5%;
-            height: auto;
-            transition: opacity 0.5s ease-in-out;
-            animation: movePointer 2s ease-in-out infinite alternate;
-            opacity: 0;
-        }
-
-        @keyframes movePointer {
-            0% {
-            top: 50%;
-            left: 53.5%;
-            }
-            100% {
-            top: 48%;
-            left: 52.5%;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
        <img src="assets/pointer-purple.png" class="purple-pointer" id="purple-pointer">
@@ -293,5 +255,13 @@
         init();
         animate();
     </script>
+    
+    <footer>
+    <div style="position: absolute; left: 24px; bottom: 0; font-size: small; font-family: 'Trebuchet MS', sans-serif; background-color: rgba(0, 0, 0, 0); color: rgba(255, 255, 255, 0.50); padding: 20px; text-align: center;">
+        <p style="margin: 0;">&copy; 2024 <a href="https://codefromaaron.github.io/" style="color: rgba(226, 173, 255, 0.7); text-decoration: none;">Aaron Hamilton Gold</a>. All Rights Reserved.</p>
+    </div>
+    </footer>
+
+    
 </body>
 </html>
