--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
                 <div class="about-me">
                     <h2>Hey there, I’m <span class="fancy">Aaron!</span></h2>
                     <p>
-                        I’m a product designer passionate about collaboration on projects that balance curiosity with practicality,
+                        I’m a video motion graphics designer passionate about collaboration on projects that balance curiosity with practicality,
                         making design decisions based on user and business needs.
                     </p>
                 </div>
