--- a/showreel.html
+++ b/showreel.html
@@ -57,57 +57,7 @@
                             allowfullscreen></iframe>
                     </div>
 
-                    <script>
-    function changeGif() {
-        var img = document.querySelector(".head-float");
-        var vidLoadIn = document.querySelector(".vid-load-in");
-        var headHold = document.querySelector(".head-open-hold");
-        var iframe = document.querySelector("iframe");
-        var exitButton = document.querySelector(".exit-vid");
-        var navigationMenu = document.querySelector(".navigation-menu");
-
-        headHold.style.display = "none";
-        vidLoadIn.style.display = "block"; // Show the vidLoadIn.gif
-        vidLoadIn.src = vidLoadIn.src; // Reset the src to start the GIF from the beginning
-        img.style.display = "none"; // Hide the headbobble gif
-
-        // Make navigation menu non-interactive and invisible
-        navigationMenu.style.pointerEvents = "none"; // Disable interactions
-        navigationMenu.style.opacity = "0"; // Slightly fade the menu for visual effect
-
-        setTimeout(function () {
-            vidLoadIn.style.display = "none"; // Hide the vidLoadIn.gif
-            headHold.style.display = "block";
-            iframe.style.opacity = 1; // Fade in the iframe
-            exitButton.style.opacity = 1; // Fade in the exit button
-            exitButton.style.pointerEvents = "auto";
-            iframe.style.pointerEvents = "auto";
-
-        }, 3000); // Change back to headbobble gif after 3 seconds (3000 milliseconds)
-    }
-
-    function closeVid() {
-        var img = document.querySelector(".head-float");
-        var vidLoadIn = document.querySelector(".vid-load-in");
-        var headHold = document.querySelector(".head-open-hold");
-        var iframe = document.querySelector("iframe");
-        var exitButton = document.querySelector(".exit-vid");
-        var navigationMenu = document.querySelector(".navigation-menu");
-
-        vidLoadIn.style.display = "none"; // Hide the vidLoadIn.gif
-        headHold.style.display = "none"; // Hide the HeadOpenHold.gif
-        img.style.display = "block"; // Show the headbobble gif
-        iframe.style.opacity = "0"; // Hide the iframe
-        exitButton.style.opacity = "0"; // Hide the exit button
-        exitButton.style.pointerEvents = "none";
-        
-        // Restore navigation menu
-        navigationMenu.style.pointerEvents = "auto"; // Enable interactions
-        navigationMenu.style.opacity = "1"; // Restore opacity
-        
-        iframe.style.pointerEvents = "none"; // Disable pointer events for the iframe
-        }
-</script>
+                    <script src="videoplayer.js"></script>
 
                 </div>
             </div>
