tweaks on timing and about text

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <h2>Hey there, I’m <span class="fancy">Aaron!</span></h2>
                     <p>
                         I’m a video motion graphics designer passionate about collaboration on projects that balance curiosity with practicality,
-                        making design decisions based on user and business needs.
+                        making content design decisions based on user and business needs.
                     </p>
                 </div>
 
