--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <script src="videoplayer.js"></script>
                
                 <div class="about-me" id="about-me">
-                    <h2>Hey there, I’m <span class="fancy">Aaron!</span></h2>
+                    <h2>Hey there, <br> I’m <span class="fancy">Aaron!</span></h2>
                     <p>
                         I’m a video motion graphics designer passionate about collaboration on projects that balance curiosity with practicality,
                         making content design decisions based on user and business needs.
